# genetic-scheduling

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main.sh  test.cpp  test.sh
config/: activities.json  rooms.json  times.json
include/: Config.h  GA.h  defines.h
src/: Config.cpp  GA.cpp
tests/: Config.test.h  GA.test.h
